--- a/src/Login/Register/Register.css
+++ b/src/Login/Register/Register.css
@@ -1,13 +1,28 @@
 
-.register-container{
-    width: 50%;
-    margin: 0 auto;
-}
 .form-container{
     width: 50%;
     margin: 0 auto;
 }
 .form-container input{
     display: block;
-    width: 100%;
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    height: 40px;
+    font-size: 20px;
+    padding-left: 10px;
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+.button{
+    background-color: aqua;
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    height: 40px;
+    font-size: 20px;
+    padding-left: 10px;
+    border-radius: 5px;
+    border: none;
 }
