--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -1,12 +1,7 @@
 .service{
-    padding-bottom: 10px;
     border: 1px solid lightgrey ;
     border-radius: 10px;
     text-align: center;
     position: relative;
-}
-.button{
-    position: absolute;
-    bottom: 0px;
-    margin-bottom: 0px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
